something ig (fortnts

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Bebas+Neue&family=Edu+TAS+Beginner&family=Graduate&family=IBM+Plex+Sans&family=Josefin+Slab&family=Linefont:wght@200&family=Montserrat&family=Nabla&family=Noto+Sans+JP&family=Noto+Sans+KR&family=Noto+Serif+SC:wght@300&family=Nunito+Sans:opsz,wght@6..12,300;6..12,500&family=Open+Sans&family=Roboto+Mono&display=swap');
 * {
     max-width: 1920px;
     overflow-x: hidden;
