--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-image: url(img/bg.png);
+    background-image: url(img/bg2.png);
 }
 
 #header{
@@ -18,4 +18,8 @@ body{
     height: 5rem;
     padding-top: 20px;
     position: sticky;
+}
+
+.hidden {
+    display:none !important;
 }
